# todo_ai

./: .gitignore
core/: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
core/core/task/: create.py
core/docs/source/: conf.py  core.rst  index.rst  modules.rst
core/tests/test_task/: test_create.py
docs/: pull_request_template.md
project_template/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
project_template/docs/source/: conf.py  index.rst  project_template.rst
project_template/source/: conf.py  index.rst
