[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Katarzyna Rzęsikowska <katarzyna.rzesikowska@codepoets.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
pytest-cov = "6.0.0"
mypy = "1.14.0"
sphinx = "8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "conftest",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: business core tests",
]
addopts = [
    "-ra -q",
    "--cov=.",
    "--cov-report",
    "term-missing:skip-covered",
    "--cov-fail-under=80"
]

[tool.coverage.run]
omit = [
    "*/tests/*.py",
    "conftest/*"
]